[gd_scene load_steps=22 format=3 uid="uid://bf3e5dtk3ra72"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_iqoj2"]
[ext_resource type="Texture2D" uid="uid://dcv6chyqxg3ux" path="res://mystic_woods_free_2.2/sprites/characters/slime.png" id="1_nwjnd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nyivj"]
atlas = ExtResource("1_nwjnd")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp07b"]
atlas = ExtResource("1_nwjnd")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_deee1"]
atlas = ExtResource("1_nwjnd")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b13q"]
atlas = ExtResource("1_nwjnd")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1ct8"]
atlas = ExtResource("1_nwjnd")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt2cb"]
atlas = ExtResource("1_nwjnd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8j3l"]
atlas = ExtResource("1_nwjnd")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvftn"]
atlas = ExtResource("1_nwjnd")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d43s"]
atlas = ExtResource("1_nwjnd")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6je37"]
atlas = ExtResource("1_nwjnd")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yurd1"]
atlas = ExtResource("1_nwjnd")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r74p"]
atlas = ExtResource("1_nwjnd")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvwif"]
atlas = ExtResource("1_nwjnd")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrkey"]
atlas = ExtResource("1_nwjnd")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kepg"]
atlas = ExtResource("1_nwjnd")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1gex1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyivj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp07b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deee1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b13q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1ct8")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt2cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8j3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvftn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d43s")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6je37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yurd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r74p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvwif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrkey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kepg")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nw8vc"]
radius = 58.0345

[sub_resource type="CircleShape2D" id="CircleShape2D_ty1wk"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_582vk"]
radius = 16.0312

[node name="enemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_iqoj2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1gex1")
animation = &"idle"

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_nw8vc")

[node name="enemy_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_ty1wk")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_582vk")

[node name="receive_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="receive_damage_cooldown" to="." method="_on_receive_damage_cooldown_timeout"]
